# ai-phone

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HarmonyOS接入方案_2026-04-20.md  HarmonyOS环境配置笔记.md  HarmonyOS自动化调研_2026-04-20.md  LICENSE  Midscene执行器接入方案.md  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  ai-phone的辅助系统核心逻辑及效果.md  codex后续计划表.md  iOS_WDA_Xcode操作手册_2026-04-19.md  iOS_WDA_Xcode理解笔记_2026-04-19.md  iOS复用流程与ai-phone对比sonic_2026-04-19.md  ios_wda_xcode_tap_demo.py  wda_mjpeg降级旋转修复方案_2026-04-20.md  wield26日下午codex工作处理日志.md  两地同步.md  使用功能介绍.md  启动终端清单.md  对外调用清单.md  工作量评估.md  执行引擎扩展方案.md  架构设计.md
backend/: .env.defaults  .env.example  .env.full.example  .gitignore  pyproject.toml  requirements.txt
backend/ai_phone/: __main__.py  config.py
backend/ai_phone/agent/: _numpy_macos_fix.py  async_utils.py  main.py  reliable_reporter.py  runner_bridge.py  ws_client.py
backend/ai_phone/server/: app.py  db.py  function_map_context.py  hub.py  launcher.py  lockstore.py  models.py  retry.py  storage.py
backend/migrations/: android_vm_v1.sql  device_wake_policies_v1.sql  distributed_agent_brain_v1.sql  distributed_agent_brain_v2.sql  function_map_context_item_v1.sql  function_map_context_v1.sql  run_retry_v1.sql  server_brain_v2.sql  vlm_trajectory_cache_v1.sql  vlm_trajectory_cache_v2.sql  vlm_trajectory_cache_v3.sql
backend/scripts/: import_android_device_profiles.py
backend/tests/: _smoke_server_brain_db.py  conftest.py  test_actions.py  test_agent_cancellation.py  test_agent_config_distribution.py  test_agent_device_cache.py  test_agent_driver_command.py  test_agent_ios_disconnect.py  test_agent_server_address.py  test_agent_supervisor.py  test_agent_ws_client.py  test_analytics_token_summary.py  test_android_driver.py  test_android_vm.py  test_app_install.py  test_cache_archive.py  test_cache_archive_build.py  test_cache_replay_orchestrate.py  test_cache_snapshot.py  test_device_wake_policies.py  test_hdc.py  test_hub.py  test_ios_driver.py  test_ios_wda_launcher.py  test_lockstore.py  test_mirror_latest_sender.py  test_orphan_reap.py  test_parse_and_validate.py  test_phash.py  test_power_preflight.py  test_readiness_supervisor.py  test_reliable_reporting.py  test_remote_driver_mock.py  test_runner_bridge_attempt.py  test_scheduler_drain.py  test_scheduler_notifications.py  test_scheduler_recover.py  test_server_api.py  test_server_brain_probe.py  test_server_brain_run_service.py  (+11 more)
(+202 files in other folders)
